// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawSymbol should match snapshot, animate false 1`] = `
<i
  aria-label="Draw Symbol"
  className="icon-draw big-symbol draw"
/>
`;

exports[`DrawSymbol should match snapshot, animate true 1`] = `
<i
  aria-label="Draw Symbol"
  className="icon-draw big-symbol draw animate-draw"
/>
`;
